Finished Modal, and fixed logo sizing on mobile

--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -19,9 +19,25 @@
   @include variables.logo;
   text-decoration: none;
 
+  
   @media screen and (max-width: variables.$small-screen) {
     font-size: 2.5rem;
-    margin: 0 0 0 1rem;
+    margin: auto 0 auto 1rem;
+  }
+
+  @media screen and (max-width: 360px) {
+    font-size: 2rem;
+    margin: auto 0 auto 1rem;
+  }
+
+  @media screen and (max-width: 310px) {
+    font-size: 1.75rem;
+    margin: auto 0 auto 1rem;
+  }
+
+  @media screen and (max-width: 275px) {
+    font-size: 1.5rem;
+    margin: auto 0 auto 1rem;
   }
 
   @media screen and (min-width: variables.$small-screen) {
@@ -79,17 +95,63 @@
   background-color: variables.$bg-color;
   border-radius: variables.$border-radius;
   z-index: 999;
+  // Timing function is elastic
+  animation: modal-pop-in 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.1) forwards;
   
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   
-  padding: 1rem 0;
+  // padding: 1rem 0;
+  width: 60vw;
+
+  & > .modalLink:last-child {
+    border-bottom: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: black;
+    border-bottom-left-radius: variables.$border-radius;
+    border-bottom-right-radius: variables.$border-radius;
+    padding-bottom: 0.5rem;
+  }
+}
+
+@keyframes modal-pop-in {
+  0% {
+    transform: translateY(100vh);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 .modalLink {
-  border-bottom: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: black;
-  padding: 0 2rem;
+  border-top: 1px;
+  border-top-style: solid;
+  border-top-color: black;
+  padding: 1rem 2rem 0 1rem;
+
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  font-size: 2rem;
+  // transition: 250ms cubic-bezier(0.77, 0, 0.175, 1);
+
+  // &:active {
+  //   background-color: variables.$accent-green;
+  // }
+  
+  &:hover {
+    background: -webkit-linear-gradient(left,#22C55E, #22BBC5);
+    color: variables.$bg-color;
+  }
+}
+
+.modalTitle {
+  @include variables.logo;
+  width: max-content;
+  
+  font-size: 2rem;
+  margin: 0;
+  padding: 1rem 0 0 1rem;
 }
